# Finlinter

./: .gitignore  .netlify-functions-install.sh  NETLIFY_DEPLOY.md  Procfile  RAILWAY_DEPLOY.md  README.md  main.py  netlify.toml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: main_finlinter-web.yml
examples/: CostBomb.java  cost_bomb.js  cost_bomb.py
finlinter/: __init__.py
finlinter/cli/: __init__.py  scan.py  serve.py
finlinter/core/: __init__.py  java_scanner.py  js_scanner.py  python_scanner.py  scanner_dispatch.py
finlinter/cost/: __init__.py  estimator.py
finlinter/web/: __init__.py  app.py
finlinter/web/static/: app.js  index.html  style.css
finlinter/web/templates/: index.html
netlify/functions/: health.py  scan.py
netlify/functions/scan/: __init__.py  requirements.txt
tests/: test_scanners.py
