[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finlinter"
version = "1.0.0"
description = "A multi-language financial code linter that detects cost-risk patterns"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FinLinter Team"}
]
keywords = ["linter", "cost", "financial", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
finlinter = "finlinter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["finlinter*"]

[tool.setuptools.package-data]
"finlinter.web" = ["templates/*", "static/*"]
